# shmurp

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build-test-deploy.yml
conan/: anyrepo_development.json  conanfile.py  conanfile_dev.txt
src/: CMakeLists.txt
src/app/shmurp/: Bloom.h  BloomShaders.h  Boss1.h  CMakeLists.txt  DebugUI.cpp  DebugUI.h  Entities.h  EventQueue.h  Game.cpp  Game.h  Instancing.h  ScreenQuad.h  Shaper.h  client.html  commons.h  configuration.h  game.h  main.cpp  shapes.h  shapes3D.h  transformations.h
src/app/shmurp/Components/: BossEvent.h  Boundaries.h  ComposedEntities.h  ControlDevice.h  CustomCallback.h  EventObserver.h  Faction.h  FirePattern.h  Geometry.h  Health.h  HealthFollower.h  HitPoints.h  ImpactRef.h  Position.h  SceneGraphComposite.h  SceneGraphParent.h  Shape.h  Speed.h  TrackerPlayer.h  Tweening.h
src/app/shmurp/Entities/: Bullets.h  Ships.h
src/app/shmurp/System/: BulletSpawn.cpp  BulletSpawn.h  Collision.cpp  Collision.h  Customizer.cpp  Customizer.h  Damage.cpp  Damage.h  Displace.cpp  Displace.h  EnemySpawn.cpp  EnemySpawn.h  EventQueue-impl.h  EventQueue.h  ForwardImpact.cpp  ForwardImpact.h  Interpolate-impl.h  Interpolate.h  KeyboardControl.cpp  KeyboardControl.h  LimitPosition.cpp  LimitPosition.h  PruneEntities.cpp  PruneEntities.h  Rendering.cpp  Rendering.h  Rendering3D.cpp  Rendering3D.h  RenderingShaders.h  SceneGraph.cpp  SceneGraph.h  Tracking.cpp  Tracking.h
src/app/shmurp/Utils/: ArcQuantifier.h  Delay.h  Iterative.h  Periodic.h  Rythm.h  TimedSequence.h  interpolation.h
